salmoth Jupyter notebook

--- a/notebooks/salmoth6_day01.ipynb
+++ b/notebooks/salmoth6_day01.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e2fd0e80",
+   "metadata": {},
+   "source": [
+    "# Test Salmoth"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3798cb59",
+   "id": "fdd3580f",
    "metadata": {},
    "outputs": [],
    "source": []
