add  load_data functions (2) in data.py

--- a/notebooks/salmoth6_load_data_and_baseline.ipynb
+++ b/notebooks/salmoth6_load_data_and_baseline.ipynb
@@ -1261,7 +1261,7 @@
    },
    "outputs": [],
    "source": [
-    "def load_data(file_path: str, size:int =-1, y_index:int=-1) -> (pd.DataFrame, pd.DataFrame) :\n",
+    "def load_data(file_path: str, size:int =-1, y_index:int=-1) -> tuple(pd.DataFrame, pd.DataFrame) :\n",
     "    \"\"\"\n",
     "    'file_path' = the path to the required file (typically 'train.csv' or 'test.csv' under a 'raw_data' folder)\n",
     "    NB: it can be an absolute or a relative path !\n",
@@ -1293,7 +1293,7 @@
    },
    "outputs": [],
    "source": [
-    "def load_train_val_data(file_path:str, y_index:int=-1, split_ratio:float=0.3,reshuffle:bool=True) -> (pd.DataFrame, pd.DataFrame) :\n",
+    "def load_train_val_data(file_path:str, y_index:int=-1, split_ratio:float=0.3,reshuffle:bool=True) -> tuple(pd.DataFrame, pd.DataFrame,pd.DataFrame, pd.DataFrame) :\n",
     "    \"\"\"\n",
     "    'file_path' = the path to the required file (typically 'train.csv' or 'test.csv' under a 'raw_data' folder)\n",
     "    NB: it can be an absolute or a relative path !\n",
@@ -1313,7 +1313,7 @@
     "    y_train=df[['cohesion', 'syntax', 'vocabulary', 'phraseology', 'grammar', 'conventions']].iloc[:len_train,:]\n",
     "    X_val_raw=df[['text_id','full_text']].iloc[len_train:,:]\n",
     "    y_val=df[['cohesion', 'syntax', 'vocabulary', 'phraseology', 'grammar', 'conventions']].iloc[len_train:,:]    \n",
-    "    if y_index >0 and y_index < len(y.columns):\n",
+    "    if y_index >0 and y_index < len(y_train.columns):\n",
     "        y_train=y_train.iloc[:,[y_index]]         \n",
     "        y_val=y_val.iloc[:,[y_index]]         \n",
     "    return X_train_raw,X_val_raw,y_train,y_val"
@@ -2406,7 +2406,7 @@
     }
    ],
    "source": [
-    "error=y_train-y_mean\n",
+    "error=y_train-y_train_mean\n",
     "error"
    ]
   },
