baseline_score in one cell in salmoth6_load_data_and_baseline.ipynb'

--- a/notebooks/salmoth6_load_data_and_baseline.ipynb
+++ b/notebooks/salmoth6_load_data_and_baseline.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "fdd3580f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T09:33:37.142658Z",
-     "start_time": "2023-03-07T09:33:37.135696Z"
+     "end_time": "2023-03-07T15:07:54.762717Z",
+     "start_time": "2023-03-07T15:07:54.125662Z"
     }
    },
    "outputs": [],
@@ -31,8 +31,8 @@
    "id": "8a817b68",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T08:37:25.368556Z",
-     "start_time": "2023-03-07T08:37:25.130578Z"
+     "end_time": "2023-03-07T15:07:57.100377Z",
+     "start_time": "2023-03-07T15:07:56.856485Z"
     }
    },
    "outputs": [
@@ -52,7 +52,9 @@
   {
    "cell_type": "markdown",
    "id": "34a7faf1",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# load datasets"
    ]
@@ -60,20 +62,24 @@
   {
    "cell_type": "markdown",
    "id": "6df88dd0",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## load dataset *Manually*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "c7743c99",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T09:58:30.234388Z",
-     "start_time": "2023-03-07T09:58:30.102602Z"
-    }
+     "end_time": "2023-03-07T15:08:16.143281Z",
+     "start_time": "2023-03-07T15:08:16.011881Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -90,13 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "aed509f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T10:18:26.524484Z",
-     "start_time": "2023-03-07T10:18:26.518710Z"
-    }
+     "end_time": "2023-03-07T15:08:18.611654Z",
+     "start_time": "2023-03-07T15:08:18.603296Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -106,13 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "id": "a0ebd8bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T11:23:17.396943Z",
-     "start_time": "2023-03-07T11:23:17.278304Z"
-    }
+     "end_time": "2023-03-07T15:08:21.398432Z",
+     "start_time": "2023-03-07T15:08:21.237111Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -128,7 +136,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:53:13.893991Z",
      "start_time": "2023-03-07T12:53:13.861266Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -336,7 +345,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:53:17.729947Z",
      "start_time": "2023-03-07T12:53:17.711385Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -408,7 +418,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:54:20.015195Z",
      "start_time": "2023-03-07T12:54:19.926524Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -532,7 +543,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:54:27.327234Z",
      "start_time": "2023-03-07T12:54:27.315287Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -656,7 +668,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:54:31.242005Z",
      "start_time": "2023-03-07T12:54:31.229322Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -683,6 +696,7 @@
      "end_time": "2023-03-07T12:54:35.049829Z",
      "start_time": "2023-03-07T12:54:35.010664Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -855,7 +869,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:54:45.597013Z",
      "start_time": "2023-03-07T12:54:45.590360Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -872,6 +887,7 @@
      "end_time": "2023-03-07T12:54:47.697734Z",
      "start_time": "2023-03-07T12:54:47.684426Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -987,7 +1003,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:55:00.763750Z",
      "start_time": "2023-03-07T12:55:00.732324Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1146,7 +1163,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:55:03.415491Z",
      "start_time": "2023-03-07T12:55:03.405573Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1244,24 +1262,27 @@
   {
    "cell_type": "markdown",
    "id": "559aacb1",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## factorize / functionize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "id": "f5624f19",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T10:41:26.473034Z",
-     "start_time": "2023-03-07T10:41:26.466396Z"
-    }
+     "end_time": "2023-03-07T15:09:11.067342Z",
+     "start_time": "2023-03-07T15:09:11.061780Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
-    "def load_data(file_path: str, size:int =-1, y_index:int=-1) -> tuple(pd.DataFrame, pd.DataFrame) :\n",
+    "def load_data(file_path: str, size:int =-1, y_index:int=-1) -> (pd.DataFrame, pd.DataFrame) :\n",
     "    \"\"\"\n",
     "    'file_path' = the path to the required file (typically 'train.csv' or 'test.csv' under a 'raw_data' folder)\n",
     "    NB: it can be an absolute or a relative path !\n",
@@ -1283,17 +1304,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 9,
    "id": "5c599a36",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T12:51:22.706134Z",
-     "start_time": "2023-03-07T12:51:22.687177Z"
-    }
+     "end_time": "2023-03-07T15:09:18.321915Z",
+     "start_time": "2023-03-07T15:09:18.314244Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
-    "def load_train_val_data(file_path:str, y_index:int=-1, split_ratio:float=0.3,reshuffle:bool=True) -> tuple(pd.DataFrame, pd.DataFrame,pd.DataFrame, pd.DataFrame) :\n",
+    "def load_train_val_data(file_path:str, y_index:int=-1, split_ratio:float=0.3,reshuffle:bool=True) -> (pd.DataFrame, pd.DataFrame,pd.DataFrame, pd.DataFrame) :\n",
     "    \"\"\"\n",
     "    'file_path' = the path to the required file (typically 'train.csv' or 'test.csv' under a 'raw_data' folder)\n",
     "    NB: it can be an absolute or a relative path !\n",
@@ -1321,13 +1343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "id": "f8a12b1f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T12:56:29.702609Z",
-     "start_time": "2023-03-07T12:56:29.699733Z"
-    }
+     "end_time": "2023-03-07T15:09:24.920506Z",
+     "start_time": "2023-03-07T15:09:24.917831Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1342,7 +1365,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:56:34.297199Z",
      "start_time": "2023-03-07T12:56:34.233831Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1369,7 +1393,9 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T12:56:37.600768Z",
      "start_time": "2023-03-07T12:56:37.467111Z"
-    }
+    },
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [
     {
@@ -1392,7 +1418,8 @@
    "cell_type": "markdown",
    "id": "436991a9",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### unit tests"
@@ -2008,14 +2035,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76b47f0b",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## line by line à la mano"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 11,
    "id": "ef2e3559",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T13:05:07.246000Z",
-     "start_time": "2023-03-07T13:05:07.107910Z"
-    }
+     "end_time": "2023-03-07T15:09:31.035795Z",
+     "start_time": "2023-03-07T15:09:30.956518Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2024,7 +2062,7 @@
        "((3910, 2), (3910, 6))"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2042,7 +2080,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T13:33:48.851047Z",
      "start_time": "2023-03-07T13:33:48.839461Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2075,7 +2114,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T13:07:01.326394Z",
      "start_time": "2023-03-07T13:07:01.307610Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2246,7 +2286,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T13:38:37.889008Z",
      "start_time": "2023-03-07T13:38:37.872779Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2419,7 +2460,7 @@
      "end_time": "2023-03-07T13:43:43.340838Z",
      "start_time": "2023-03-07T13:43:43.328044Z"
     },
-    "collapsed": true
+    "hidden": true
    },
    "outputs": [
     {
@@ -2591,7 +2632,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T13:44:47.615447Z",
      "start_time": "2023-03-07T13:44:47.606884Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2624,7 +2666,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T13:45:36.291556Z",
      "start_time": "2023-03-07T13:45:36.281478Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2657,7 +2700,8 @@
     "ExecuteTime": {
      "end_time": "2023-03-07T13:46:11.524571Z",
      "start_time": "2023-03-07T13:46:11.517661Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2674,6 +2718,42 @@
    "source": [
     "MCRMSE=RMSE.mean()\n",
     "MCRMSE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dbad3b2",
+   "metadata": {},
+   "source": [
+    "## baseline in one cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dabf02a3",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-07T15:10:20.018697Z",
+     "start_time": "2023-03-07T15:10:19.960401Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6528740244626897"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_raw, y_train= load_data(train_path)\n",
+    "baseline_score=np.sqrt(((y_train-y_train.mean())**2).mean(axis=0)).mean()\n",
+    "baseline_score"
    ]
   },
   {
