Using a Deberta a model on a local machine crashed the kernel, migrating to google Colab

--- a/notebooks/Test-transformers.ipynb
+++ b/notebooks/Test-transformers.ipynb
@@ -330,10 +330,10 @@
     "input_ids = Input(shape=((512)),dtype='int32')\n",
     "attention_mask = Input(shape=((512)), dtype='int32')\n",
     "\n",
-    "transformer = transformer_model(dict(input_ids=input_ids,attention_mask=attention_mask))    \n",
-    "hidden_states = transformer[1] # get output_hidden_states\n",
+    "#transformer = transformer_model(dict(input_ids=input_ids,attention_mask=attention_mask))    \n",
+    "#hidden_states = transformer[1] # get output_hidden_states\n",
     "\n",
-    "hidden_states_size = 4 # count of the last states \n",
+    "#hidden_states_size = 4 # count of the last states \n",
     "hiddes_states_ind = list(range(-hidden_states_size, 0, 1))\n",
     "\n",
     "selected_hiddes_states = layers.concatenate(tuple([hidden_states[i] for i in hiddes_states_ind]))\n",
@@ -358,11 +358,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## From here, the training was carried out in Google Colab."
+   ]
   }
  ],
  "metadata": {
