--- a/notebooks/Test-transformers.ipynb
+++ b/notebooks/Test-transformers.ipynb
@@ -275,6 +275,11 @@
     "transformer = transformer_model(dict(input_ids=input_ids,attention_mask=attention_mask))    \n",
     "hidden_states = transformer[0] # get output_hidden_states\n",
     "\n",
+    "#transformer = transformer_model(dict(input_ids=input_ids,attention_mask=attention_mask))    \n",
+    "#hidden_states = transformer[1] # get output_hidden_states\n",
+    "\n",
+    "#hidden_states_size = 4 # count of the last states \n",
+    "hiddes_states_ind = list(range(-hidden_states_size, 0, 1))\n",
     "\n",
     "# Add a layer maxpool 1D\n",
     "pooling_layer = layers.GlobalMaxPooling1D()(hidden_states)\n",
@@ -328,7 +333,12 @@
     "history = model.fit(x={'input_ids':tokenized_train_texts['input_ids'],\n",
     "                        'attention_mask':tokenized_train_texts['attention_mask']},\n",
     "                    y=train_targets,epochs=100,batch_size=64,validation_split=0.2, callbacks=[es],\n",
-    "          verbose=1)"
+    "          verbose=1)",
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## From here, the training was carried out in Google Colab."
    ]
   }
  ],
