Completeing app.py and adding requirements

--- a/notebooks/salmoth6_test_news_api.ipynb
+++ b/notebooks/salmoth6_test_news_api.ipynb
@@ -10,6 +10,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "c3baf934",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cohesion</th>\n",
+       "      <th>syntax</th>\n",
+       "      <th>vocabulary</th>\n",
+       "      <th>phraseology</th>\n",
+       "      <th>grammar</th>\n",
+       "      <th>conventions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cohesion  syntax  vocabulary  phraseology  grammar  conventions\n",
+       "0         3       3           3            3        3            3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "scores={\"cohesion\" : [3], \"syntax\": [3] , \"vocabulary\": [3], \"phraseology\": [3], \"grammar\": [3], \"conventions\": [3] }\n",
+    "# 5. we can display the prediction to the user\n",
+    "scores_table= pd.DataFrame.from_dict(scores)\n",
+    "scores_table"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "fd15db53",
    "metadata": {},
