--- a/notebooks/docker_GCR___commands_for PLT_project.ipynb
+++ b/notebooks/docker_GCR___commands_for PLT_project.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker system prune --all "
+    "!docker system prune"
    ]
   },
   {
